--- a/Lustrious/Views/Cliente/CriarCliente.cshtml
+++ b/Lustrious/Views/Cliente/CriarCliente.cshtml
@@ -21,6 +21,7 @@
 </style>
 
 <form class="container" asp-action="CriarCliente" method="post" enctype="multipart/form-data">
+ @Html.AntiForgeryToken()
  <h2>CADASTRAR CLIENTE</h2>
 
  <div class="row">
@@ -53,7 +54,7 @@
 
 
 
-		<input class="hint" type="file"  name="foto" accept="image/*" />
+ 		<input class="hint" type="file" name="foto" accept="image/*" />
  </div>
 
  <div class="button-row">
