--- a/Lustrious/Views/Home/Index.cshtml
+++ b/Lustrious/Views/Home/Index.cshtml
@@ -6,16 +6,41 @@
 
 </header>
 
-<main>
-    <div class="hero">
-        <img src="~/imagens/HOME.PNG" alt="Lustrious" />
+<div id="meuCarrossel" class="carousel slide" data-bs-ride="carousel">
 
-        <!-- 🔹 Texto central -->
-        <h1 class="hero-text">LUSTRIOUS</h1>
+    <!-- Indicadores -->
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#meuCarrossel" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#meuCarrossel" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#meuCarrossel" data-bs-slide-to="2"></button>
     </div>
-</main>
+
+    <!-- Imagens -->
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="imagens/Carrossel/imagens_carrossel_3.png" class="d-block w-100" alt="Imagem 1">
+        </div>
+
+        <div class="carousel-item">
+            <img src="imagens/Carrossel/imagens_carrossel_3.png" class="d-block w-100" alt="Imagem 2">
+        </div>
+
+        <div class="carousel-item">
+            <img src="imagens/Carrossel/imagens_carrossel_3.png" class="d-block w-100" alt="Imagem 3">
+        </div>
+    </div>
+
+    <!-- Botões de navegação -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#meuCarrossel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+    </button>
+
+    <button class="carousel-control-next" type="button" data-bs-target="#meuCarrossel" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </button>
 
 </div>
+
 
 <!-- 🔻 🔻 🔻 AQUI COMEÇA A PARTE DE BAIXO DA TELA 🔻 🔻 🔻 -->
 
@@ -26,7 +51,7 @@
 <!-- Banner -->
 <div class="banner-longo">
     <!-- COLOQUE A IMAGEM DO BANNER AQUI (banner_azul.png) -->
-    <img src="../Imagens/LustrativaP.png" alt="Banner Lustrious" />
+    <img src="../Imagens/Banner/imagem_banner_1.png" />
 </div>
 
 <!-- DESTAQUE -->
@@ -160,10 +185,11 @@
 
     /* ----------- TÍTULO: DESTAQUES DO MÊS ----------- */
     .destaques-mes {
-        margin-top: 100vh;
+        margin-top: 30px; /* você pode ajustar: 10px, 20px, 40px */
         text-align: center;
         padding: 25px 0;
     }
+
 
         .destaques-mes p {
             font-size: 25px;
@@ -180,6 +206,20 @@
         width: 100%;
         display: block;
     }
+
+    .banner-longo {
+        width: 100vw;
+        margin-left: calc(-50vw + 50%);
+        overflow: hidden;
+    }
+
+        .banner-longo img {
+            width: 100%;
+            height: auto;
+            display: block;
+            object-fit: cover;
+        }
+
 
     /* ----------- TÍTULOS DOURADOS ----------- */
     .titulo-destaque,
@@ -309,5 +349,11 @@
         margin: 10px;
         cursor: pointer;
     }
+
+    html, body {
+        max-width: 100%;
+        overflow-x: hidden;
+    }
+
 
 </style>
