--- a/Lustrious/Views/Cliente/CriarCliente.cshtml
+++ b/Lustrious/Views/Cliente/CriarCliente.cshtml
@@ -5,109 +5,133 @@
 }
 
 <style>
- body {
- font-family: Arial, sans-serif;
- background: #c7b99a;
- width:100%;
- height:100%;
- margin:0;
- padding:0;
- }
 
- .container {
- width:70%;
- margin:40px auto;
- background: #fff9d6;
- border:4px solid #b8995e;
- border-radius:20px;
- padding:30px;
- }
+    body {
+        background: #b8ab93;
+        font-family: Arial, sans-serif;
+    }
+    .cadastrar{
+        border-radius:5px;
+        height:38px;
+        color:white;
+        background-color:rgb(0,254,100);
+        border:none;
+    }
 
- h2 {
- text-align: center;
- margin-bottom:25px;
- color: #3a2f1b;
- }
+    /* CARD */
+    .container-card {
+        width: 65%;
+        margin: 40px auto;
+        background: #f6eec9;
+        padding: 40px;
+        border-radius: 20px;
+        border: 8px solid #c9a55b;
+    }
 
- .form-group {
- margin-bottom:15px;
- font-weight: bold;
- font-size:14px;
- }
+        .container-card h2 {
+            text-align: center;
+            margin-bottom: 25px;
+        }
 
- input[type="text"],
- input[type="email"],
- input[type="password"] {
- width:60%;
- padding:10px;
- border:2px solid #ccb27a;
- border-radius:6px;
- font-size:14px;
- }
+    /* LAYOUT */
+    .row {
+        display: flex;
+        justify-content: space-between;
+    }
 
- .foto-container {
- width:230px;
- height:260px;
- background: #fffefa;
- border:3px solid #c6a96b;
- border-radius:20px;
- display: flex;
- justify-content: center;
- align-items: center;
- cursor: pointer;
- position: relative;
- overflow: hidden;
- }
+    /* LADO ESQUERDO */
+    .left-side {
+        width: 55%;
+    }
 
- .foto-preview {
- width:150px;
- opacity:0.9;
- object-fit: cover;
- }
+        .left-side .foto-container {
+            margin-top: 15px;
+        }
 
- .row {
- display: flex;
- justify-content: space-between;
- }
 
- .button-row {
- margin-top:20px;
- display: flex;
- gap:20px;
- }
+    .form-group {
+        margin-top: 10px;
+        font-size: 12px;
+        font-weight: bold;
+    }
 
- button,
- .cancelar {
- padding:10px25px;
- border-radius:10px;
- border: none;
- font-weight: bold;
- cursor: pointer;
- text-decoration: none;
- display: inline-block;
- text-align: center;
- }
+    .left-side input,
+    .sexo-box select {
+        width: 90%;
+        padding: 8px;
+        margin-top: 3px;
+        margin-bottom: 10px;
+        border-radius: 6px;
+        border: 1px solid #9b8968;
+    }
 
- .cadastrar {
- background: #c5bca2;
- }
+    /* FOTO */
+    .foto-container {
+        width: 200px;
+        height: 200px;
+        border: 4px solid #c9a55b;
+        border-radius: 16px;
+        overflow: hidden;
+        cursor: pointer;
+        position: relative;
+    }
 
- .cancelar {
- background: #b34747;
- color: white;
- }
+    .foto-preview {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 
- .sexo-box select {
- width:150px;
- padding:10px;
- border:2px solid #ccb27a;
- border-radius:6px;
- font-size:14px;
- background: #efe3b9;
- }
+    .foto-input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+    }
+
+    /* BOTÕES */
+    .button-row {
+        text-align: center;
+        margin-top: 35px;
+    }
+
+    .btn-editar {
+        background: #c7c0ae;
+        padding: 10px 25px;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+        margin-right: 10px;
+    }
+
+    .cancelar {
+        background: #a04444;
+        color: white;
+        padding: 10px 25px;
+        border-radius: 6px;
+        text-decoration: none;
+    }
+
+    /* BOTÃO CADASTRAR (HOVER) */
+    .btn-editar:hover {
+        background: #b3aa96; /* cor ao passar o mouse */
+        color: white; /* muda a cor do texto */
+        transition: 0.3s; /* animação suave */
+    }
+
+    /* BOTÃO CANCELAR (HOVER) */
+    .cancelar:hover {
+        background: #7d3232; /* cor ao passar o mouse */
+        color: #fff; /* texto branco */
+        transition: 0.3s;
+    }
+
 </style>
 
-<form class="container" asp-action="CriarCliente" method="post" enctype="multipart/form-data">
+<form class="container-card" asp-action="CriarCliente" method="post" enctype="multipart/form-data">
 
  @Html.AntiForgeryToken()
 
@@ -115,7 +139,7 @@
 
  <div class="row">
 
- <div>
+ <div class="left-side">
  <div class="form-group">NOME DO CLIENTE:</div>
  <input asp-for="Nome" type="text" placeholder="Digite o nome aqui..." />
  <span asp-validation-for="Nome" class="text-danger"></span>
